unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/project_cloud__Project_Task_Dependency__c.object-meta.xml
<CustomObject>
    <description>System object representing a link between 2 project tasks. This object should be hidden from all users.</description>
    <label>Project Task Dependency</label>
    <nameField>
        <displayFormat>PTD-{0000000000}</displayFormat>
        <label>Project Task Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>