unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Child__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Child__c</fullName>
    <description>M/D Relationship representing the child Project Task</description>
    <inlineHelpText>The child dependent project task</inlineHelpText>
    <label>Child Dependent</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Parent Dependencies</relationshipLabel>
    <relationshipName>Parent_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>