unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Display_Name__c</fullName>
    <formula>&quot;Parent: \&quot;&quot; &amp; project_cloud__Parent__r.Name &amp; &quot;\&quot; -&gt; Child: \&quot;&quot; &amp; project_cloud__Child__r.Name</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>