unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hash__c</fullName>
    <formula>CASESAFEID(project_cloud__Parent__c) &amp; CASESAFEID(project_cloud__Child__c)</formula>
    <label>Hash</label>
    <type>Text</type>
</CustomField>