unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Increment__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Increment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used by the stack as a member variable of the Object to determine how far to move the Parent End Date. At the end of processing the value should always be 0</description>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>