unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Lag__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Lag__c</fullName>
    <description>Number of days after/before the Parent Task starts/ends that the child task should start.</description>
    <inlineHelpText>Number of days after/before the Parent Task starts/ends that the child task should start.</inlineHelpText>
    <label>Lag/Lead</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>