unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Parent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>L/U Relationship representing the parent Project Task. Would have been preferable to have a second M/D but this is prevented by Salesforce. The help text on this field is used by the new project wizard</description>
    <inlineHelpText>Input the row numbers of any preceding project tasks that you wish to make this task dependent upon. (Note these numbers will be recalculated automatically as the project tasks are resorted into date order)</inlineHelpText>
    <label>Dependent Upon</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Child Dependencies</relationshipLabel>
    <relationshipName>Child_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>