unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Parent_Complete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Complete</label>
    <type>Checkbox</type>
</CustomField>