unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Parent_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent_End__c</fullName>
    <description>This is the key field in the calculations of the cascading dependency updates. This field should never be updated by the user it is updated by the triggers. At all times it will be the same value as Parent Project Task&#39;s Calculated End Date + the parents Non Working End value</description>
    <inlineHelpText>This is a system field and should never be visible or modified.</inlineHelpText>
    <label>Parent End Date</label>
    <type>Date</type>
</CustomField>