unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Type_Enum__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type_Enum__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is a system field and should never be visible.</description>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Type Enum (System)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>