unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/fields/project_cloud__Working_Days__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Working_Days__c</fullName>
    <description>Indicates which days in the child task are working days.</description>
    <formula>IF(project_cloud__Child__r.project_cloud__IsWorking_Sunday__c, 1, 0) + IF(project_cloud__Child__r.project_cloud__IsWorking_Monday__c, 2, 0) + IF(project_cloud__Child__r.project_cloud__IsWorking_Tuesday__c, 4, 0) + IF(project_cloud__Child__r.project_cloud__IsWorking_Wednesday__c, 8, 0) + IF(project_cloud__Child__r.project_cloud__IsWorking_Thursday__c, 16, 0) + IF(project_cloud__Child__r.project_cloud__IsWorking_Friday__c, 32, 0) + IF(project_cloud__Child__r.project_cloud__IsWorking_Saturday__c, 64, 0)</formula>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Working Days (System)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>