unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/validationRules/project_cloud__Dependency_in_Same_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Dependency_in_Same_Project</fullName>
    <active>true</active>
    <description>Make sure the dependency junction Object is making a link between 2 tasks in the same project phase</description>
    <errorConditionFormula>project_cloud__Child__r.project_cloud__Project_Phase__r.project_cloud__Project__r.Id != project_cloud__Parent__r.project_cloud__Project_Phase__r.project_cloud__Project__r.Id</errorConditionFormula>
    <errorMessage>Dependencies between Projects Tasks in different Projects are currently not supported</errorMessage>
</ValidationRule>