unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/validationRules/project_cloud__Dependents_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Dependents_Read_Only</fullName>
    <active>true</active>
    <description>The Parent Dependent Lookup field is read only. I.e once the lookup is created it cannot be modified to point to another object</description>
    <errorConditionFormula>ISCHANGED(project_cloud__Parent__c) || ISCHANGED(project_cloud__Child__c)</errorConditionFormula>
    <errorMessage>The Parent and Child relationships cannot be modified.</errorMessage>
</ValidationRule>