unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/validationRules/project_cloud__Increment_Always_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Increment_Always_Zero</fullName>
    <active>true</active>
    <description>The increment field is a system field for calculating the parent end date, after calculation it should always be 0 to prevent future calculations being compromised.</description>
    <errorConditionFormula>ISBLANK(project_cloud__Increment__c) || project_cloud__Increment__c != 0</errorConditionFormula>
    <errorDisplayField>project_cloud__Increment__c</errorDisplayField>
    <errorMessage>Increment must always be 0</errorMessage>
</ValidationRule>