unpackaged/main/default/objects/project_cloud__Project_Task_Dependency__c/validationRules/project_cloud__No_Self_Relationships.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__No_Self_Relationships</fullName>
    <active>true</active>
    <description>Prevent the creation of a dependency with the same Parent and child</description>
    <errorConditionFormula>project_cloud__Parent__c = project_cloud__Child__c</errorConditionFormula>
    <errorMessage>This Dependency cannot be created it will create a circular (self) relationship</errorMessage>
</ValidationRule>